test/tests/compiler/16_characters_and_strings/valid/plx1_kw1_in_names.plx
pub fn main(none) i32 {
    char1: i32 = 1
    string1: i32 = 2
    i81: i32 = 3
    u81: i32 = 4
    
    return (char1 + string1 + i81 + u81) - 10
}
