test/tests/compiler/16_characters_and_strings/invalid_types/plx1_string_is_not_i8_pointer.plx
pub str: *i8;

pub fn main(none) i32 {
    return 0
}

pub str: string = "foo"
